--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -102,4 +102,10 @@
     <string name="verify_phone_number" translation_description="Button text to submit confirmation code and complete phone verification">Verify Phone Number</string>
     <string name="continue_phone_login" translation_description="Button text to submit phone number and send sms">Continue</string>
     <string name="sms_terms_of_service" translation_description="Fine print warning displayed below Verify Phone Number button">By tapping &#8220;%1$s&#8220;, an SMS may be sent. Message &amp; data rates may apply.</string>
+    <string name="title_activity_home">HomeActivity</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
+    <string name="action_settings">Settings</string>
+    <string name="section_format">Hello World from section: %1$d</string>
 </resources>
